--- a/index.html
+++ b/index.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voe Conosco</title>
+
     <link rel="shortcut icon" href="imagens/airplane_icon_350x350.png" type="image/x-icon">
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css" media="screen">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sriracha&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+    <script src="js/menu.js" defer></script>
+
+    <script src="js/btn-menu-mob.js" defer></script>
+
+    <title>Voe Conosco</title>
+
 </head>
 <body>
-        <header>
+        <header id="header">
             <div class="interface">
 
                 <section class="logo">
-                    <img src="imagens/logotipo.png" alt="Logotipo de um avião">
+                    <img class="logo-branca" src="imagens/logotipo.png" alt="Logotipo de um avião">
+                    <img class="logo-preta"  src="imagens/logotipo_p.png" alt="Logotipo de um avião">
                 </section>
 
                 <section class="menu-desktop">
@@ -34,6 +48,22 @@
                     <a href="#">
                         <button>Contato</button>
                     </a>
+                </section>
+
+                <div class="btn-menu-mob" id="btn-menu-mob">
+                    <div class="line-menumob-1"></div>
+                    <div class="line-menumob-2"></div>
+                </div>
+
+                <section class="menu-mobile" id="menu-mobile">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Hotéis</a></li>
+                            <li><a href="#">Destinos</a></li>
+                            <li><a href="#">Passagens</a></li>
+                        </ul>
+                    </nav>
                 </section>
 
             </div>
@@ -71,12 +101,12 @@
 
                 <article class="itens-container">
 
-                    <div class="img-itens">
+                    <div class="img-itens item-1">
                         <img src="imagens/carro.png" alt="imagem de uma kombi laranja">
                     </div>
 
 
-                    <div class="txt-itens">
+                    <div class="txt-itens item-2">
                         <h3><span>Os</span> melhores<br> destinos</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim accusamus repellat, a nisi qui cupiditate blanditiis id?</p>
                     </div>
